--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,69 @@
 .App {
   display: flex;
   flex-direction: column;
+  .Projects {
+    padding-top: 50px;
+    .Project__Buttons {
+      margin-top: 30px;
+      display: flex;
+      button {
+        width: 100%;
+        padding: 9px;
+      }
+      .MuiSvgIcon-root {
+        margin-left: 10px !important;
+      }
+
+      .Project__WebsiteButton {
+        background: #e44744;
+        font-weight: 500;
+        color: #fff;
+        border: 2px solid transparent;
+      }
+
+      .Project__WebsiteButton:hover {
+        border: 2px solid #e44744 !important;
+        color: #e44744 !important;
+        background: #fff;
+      }
+
+      .Project__GitHubButton {
+        background: #fff;
+        font-weight: 500;
+        color: #e44744;
+        border: 2px solid #e44744;
+        margin-left: 30px;
+      }
+
+      .Project__GitHubButton:hover {
+        border: 2px solid #fff !important;
+        color: #fff !important;
+        background: #e44744;
+      }
+    }
+    h2 {
+      font-size: 18px;
+      margin-top: 20px;
+      font-weight: 600;
+      color: #211c28;
+    }
+    h1 {
+      color: #211c28;
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+    p {
+      color: #211c28;
+      font-weight: 500;
+      line-height: 30px;
+    }
+    .Project__Image {
+      margin-top: 10px;
+      img {
+        width: 100%;
+      }
+    }
+  }
   .Skills {
     width: 100%;
     h1 {
